# rcs-client

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: app.css
src/i18n/: de.js  en.js  es.js  fr.js  ja.js  zh.js
src/js/: api.js  i18n.js  icons.js  session.js  util.js
src/js/views/: ai.js  auth.js  home.js  me.js  risk.js  strategies.js
